preventing activity paragraphs from overlapping checkboxes

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1893,3 +1893,6 @@ body.format-topcoll.editing ul.ctopics .section .activity .actions {
     margin-bottom: auto;
 }
 
+li.activity p {
+    margin-right: 1.75em;
+}
